Changed labels to eq: system, added comment lines around eqns.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.4 2009/07/20 14:03:41 ith Exp $
+% $Id: dbi-intro.tex,v 1.5 2009/07/20 15:16:07 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.4 2009/07/20 14:03:41 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.5 2009/07/20 15:16:07 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -112,12 +112,12 @@ by multiple coincident branes \cite{thomasward}.
 
 % TODO: Change to chapter structure.
 The paper is organized as follows. We briefly review DBI inflation 
-in Section \ref{sec:dbiinflation}. In Sections \ref{sec:upper} and  
-\ref{sec:lower}, we derive the respective 
+in Section \ref{sec:dbiinflation}. In Sections \ref{sec:upper-dbi} and  
+\ref{sec:lower-dbi}, we derive the respective 
 limits on the amplitude of the tensor perturbations.  
 We determine how the BM bound may be relaxed in generalized DBI models in 
-Section \ref{sec:satisfy} and discuss multi-brane 
-IR scenarios in Section \ref{sec:multiple}. Finally, we conclude  
+Section \ref{sec:relaxing-dbi} and discuss multi-brane 
+IR scenarios in Section \ref{sec:multiple-dbi}. Finally, we conclude  
 in Section \ref{Conclusion}.   
 Units are chosen such that $\Mpl \equiv (8\pi G )^{-1/2}= 2 
 .4 \times 10^{18}\, {\rm GeV}$ 
