--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.5 2009/07/20 15:16:07 ith Exp $
+% $Id: dbi-intro.tex,v 1.6 2009/07/20 16:46:09 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.5 2009/07/20 15:16:07 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.6 2009/07/20 16:46:09 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -36,8 +36,10 @@ cosmological observations.
  
 One class of string-theoretic models that has received 
 considerable attention is D-brane inflation
-\cite{brane1,brane2,brane3,brane4,brane5,brane6,brane7,brane8,brane9,brane10,brane11,brane12,brane13
-,brane14,brane15,brane16,brane17,Brodie:2003qv,Vikman:2006hk,Mukhanov:2005bu,Kallosh:2007wm,brane18,
+\cite{brane1,brane2,brane3,brane4,brane5,
+brane6,brane7,brane8,brane9,brane10,brane11,brane12,brane13,
+brane14,brane15,brane16,brane17,Brodie:2003qv,Vikman:2006hk, 
+Mukhanov:2005bu,Kallosh:2007wm,brane18,
 brane19,brane20,brane21}. 
 (For recent reviews, see, e.g., \cite{tyereview,cline}). 
 Of particular interest 
@@ -337,7 +339,7 @@ attract considerable attention. The Dirac-Born-Infeld (DBI) scenario
 of the compactified type IIB theory is a well-motivated model, 
 in which inflation is driven by one or more ${\rm D}$-branes 
 propagating in a warped `throat' background
-\cite{brane1,brane11,brane12,brane13,brane2,brane20,brane3,brane4,brane5,brane6}
+\cite{brane1,brane11,brane12,brane13, brane2,brane20,brane3, brane4,brane5,brane6}
 . Such a background is generated 
 by the non-trivial form-field fluxes over the internal dimensions. 
 (For recent reviews, see
