--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.11 2009/07/20 15:42:17 ith Exp $
+% $Id: multibrane.tex,v 1.12 2009/07/20 16:46:21 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.11 2009/07/20 15:42:17 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.12 2009/07/20 16:46:21 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -1161,7 +1161,7 @@ Eq. (\ref{eq:genreduce-multi}) can be transformed into the
 linear equation
 % 
 \begin{equation}
-\label{lineargeneral}
+\label{eq:lineargen-multi}
 U_{,X}+ \frac{3(2-\alpha )}{2\alpha} \frac{U}{X} = \frac{\alpha -6}{\alpha}
 \end{equation}
 % 
