--- a/thesis.tex
+++ b/thesis.tex
@@ -1,14 +1,13 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.15 2009/07/17 16:13:42 ith Exp $
+% $Id: thesis.tex,v 1.16 2009/07/20 16:46:35 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 %twoside,
 12pt,
-draft,
 listof=totoc,
 bibliography=totoc,
-doublespacing
+onehalfspacing
 %,openright
 ]
 {icldt}
@@ -18,23 +17,24 @@ doublespacing
 % My formatting package
 % CVSon for cvs revision number in footers
 % CVSoff is default
-\usepackage[CVSon]{ihformat}
+\usepackage[CVSon, labels]{ihformat}
+
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.15 2009/07/17 16:13:42 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.16 2009/07/20 16:46:35 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Include list
 \includeonly{
-abstract,
-acknowledgements,
-mainintro,
+% abstract,
+% acknowledgements,
+% mainintro,
 dbi/dbi-intro,
 dbi/dbi,
 dbi/multibrane,
-numerical/numerical,
-theend
+% numerical/numerical,
+% theend
 }
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \begin{document}
